--- a/job finder/package.json
+++ b/job finder/package.json
@@ -11,13 +11,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.9.5",
     "axios": "^1.4.0",
     "html-react-parser": "^4.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
     "react-redux": "^8.1.1",
-    "redux": "^4.2.1",
+    "react-router-dom": "^6.14.1",
     "redux-thunk": "^2.4.2"
   },
   "devDependencies": {
